fix: use Arrays.listOf() instead of List.of() to allow for null values in usernames comparison